src/pydjinni/generator/objc/it/swift/error/expected/include/objc/SFTThrowingCallback.h
// AUTOGENERATED FILE - DO NOT MODIFY!
// This file was generated by PyDjinni from 'error.pydjinni'
#import <Foundation/Foundation.h>
#import "SFTFooError.h"
NS_SWIFT_NAME(ThrowingCallback)
@protocol SFTThrowingCallback 
- (void)throwingError:(NSError* _Nullable * _Nonnull)error
  __attribute__((swift_error(nonnull_error)))
  NS_SWIFT_NAME(throwingError());
@end
